Update mobile pages

--- a/HTML/Mobile/Login.html
+++ b/HTML/Mobile/Login.html
@@ -145,10 +145,10 @@
             if (username === 'test@user.com' && password === '123456') {
                 document.getElementById('loginMessage').textContent = 'Login successful!';
                 if(userType == "driver"){
-                    window.location.href = "RegisterDriver.html";
+                    window.location.href = "dashboardDriver.html";
                 }
                 if(userType == "rider"){
-                    window.location.href = "RegisterRider.html";
+                    window.location.href = "dashboardRider.html";
                 }
                 
             } 
