--- a/HTML/Mobile/MyProfile.html
+++ b/HTML/Mobile/MyProfile.html
@@ -3,22 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>User Registration</title>
+    <title>App Login</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             background-color: #f2f2f2;
             margin: 0;
-            padding: 20px;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+            position: relative;
         }
         .mobile-container {
+            background-color: #ffffff;
+            padding: 40px;
+            border-radius: 8px;
+            box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.1);
             width: 400px;
             height: 800px;
-            margin: auto;
-            background-color: #fff;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            position: relative;
         }
         .form-group {
             margin-bottom: 20px;
@@ -57,52 +65,91 @@
         .btn:hover {
             background-color: #0056b3;
         }
+        .title-container{
+            display: flex;
+            width: 100%;
+        }
+        .register-container{
+            display: flex;
+            width: 100%;
+        }
+        .bottom-menu-bar-container {
+            position: absolute;
+            bottom: 10px;
+            width: 90%;
+            display: flex;
+            justify-content: space-between; 
+        }
+        .menu-img {
+            width: 20px;
+            height: 20px;
+            cursor: pointer;
+        }
     </style>
 </head>
 <body>
-
-<div class="mobile-container">
-    <h2>User Registration</h2>
-    <form id="registrationForm" action="#" method="post">
-        <div class="form-group">
-            <label for="avatar">Avatar:</label>
-            <div class="avatar-upload">
-                <img src="placeholder.jpg" alt="Avatar">
-            </div>
+    <div class="mobile-container">
+        <div class="title-container">
+            <h2>User Registration</h2>
         </div>
-        <div class="form-group">
-            <label for="name">Name:</label>
-            <span id="name">John Doe</span>
+        <div class="register-container">
+            <form id="registrationForm" action="#" method="post">
+                <div class="form-group">
+                    <label for="avatar">Avatar:</label>
+                    <div class="avatar-upload">
+                        <img src="resource/avatar_icon.png" alt="Avatar">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="name">Name:</label>
+                    <span id="name">John Doe</span>
+                </div>
+                <div class="form-group">
+                    <label for="address">Address:</label>
+                    <span id="address">123 Main St, City</span>
+                </div>
+                <div class="form-group">
+                    <label for="email">Email:</label>
+                    <span id="email">john.doe@example.com</span>
+                </div>
+                <div class="form-group">
+                    <label for="phone">Phone Number:</label>
+                    <span id="phone">123-456-7890</span>
+                </div>
+                <div class="form-group">
+                    <label for="rego">Rego:</label>
+                    <span id="rego">ABC123</span>
+                </div>
+                <div class="form-group">
+                    <label for="v-type">Vehicle Type:</label>
+                    <span id="v-type">Sedan</span>
+                </div>
+                <button type="button" class="btn" onclick="navigateToRegisterRider()">Change Details</button>
+            </form>
         </div>
-        <div class="form-group">
-            <label for="address">Address:</label>
-            <span id="address">123 Main St, City</span>
+        <div class="bottom-menu-bar-container">
+            <img src="resource/home_icon.png" class="menu-img" onclick="navigateToDashBoard()">
+            <img src="resource/rider_icon.png" class="menu-img" onclick="navigateToMyRide()">
+            <img src="resource/user_icon.png" class="menu-img" onclick="navigateToMyProfile()">
+            <img src="resource/chat_icon.png" class="menu-img" onclick="navigateToMyMessage()">
         </div>
-        <div class="form-group">
-            <label for="email">Email:</label>
-            <span id="email">john.doe@example.com</span>
-        </div>
-        <div class="form-group">
-            <label for="phone">Phone Number:</label>
-            <span id="phone">123-456-7890</span>
-        </div>
-        <div class="form-group">
-            <label for="rego">Rego:</label>
-            <span id="rego">ABC123</span>
-        </div>
-        <div class="form-group">
-            <label for="v-type">Vehicle Type:</label>
-            <span id="v-type">Sedan</span>
-        </div>
-        <button type="button" class="btn" onclick="navigateToDashBoard()">Change Details</button>
-    </form>
-</div>
-
+    </div>
+</body>
 <script>
     function navigateToDashBoard(){
-        window.location.href = "RegisterDriver.html";
+        window.location.href = "dashboardDriver.html";
+    }
+    function navigateToMyRide(){
+        window.location.href = "MyRide.html";
+    }
+    function navigateToMyMessage(){
+        window.location.href = "MyMessage.html";
+    }
+    function navigateToMyProfile(){
+        window.location.href = "MyProfile.html";
+    }
+    function navigateToRegisterRider(){
+        window.location.href = "RegisterRider.html";
     }
 </script>
-
-</body>
 </html>
