--- a/HTML/Mobile/MyProfile.html
+++ b/HTML/Mobile/MyProfile.html
@@ -125,6 +125,7 @@
                     <span id="v-type">Sedan</span>
                 </div>
                 <button type="button" class="btn" onclick="navigateToRegisterRider()">Change Details</button>
+                <button type="button" class="btn" onclick="logout()">Log Out</button>
             </form>
         </div>
         <div class="bottom-menu-bar-container">
@@ -150,6 +151,9 @@
     }
     function navigateToRegisterRider(){
         window.location.href = "RegisterRider.html";
+    }
+    function logout(){
+        window.location.href = "Login.html";
     }
 </script>
 </html>
