--- a/HTML/Mobile/Login.html
+++ b/HTML/Mobile/Login.html
@@ -99,7 +99,7 @@
 <body>
     <div class = "mobile-container">
         <div class="login-container">
-            <h2>Ride Share</h2>
+            <h2>NeighborLink</h2>
             <form action="#" method="post" id="loginForm">
                 <input type="text" id="username" name="username" placeholder="Username" required><br>
                 <input type="password" id="password" name="password" placeholder="Password" required><br>
@@ -148,7 +148,7 @@
                     window.location.href = "dashboardDriver.html";
                 }
                 if(userType == "rider"){
-                    window.location.href = "dashboardRider.html";
+                    window.location.href = "dashboardDriver.html";
                 }
                 
             } 
