--- a/HTML/Mobile/Review.html
+++ b/HTML/Mobile/Review.html
@@ -81,7 +81,7 @@
         <p class="star" onclick="setRating(5)">&#9734;</p>
     </div>
     <textarea class="comment" placeholder="Enter your comment here"></textarea><br>
-    <button class="submit-btn" onclick="submitComment()">提交</button>
+    <button class="submit-btn" onclick="submitComment()">Submit</button>
     <div id="success-msg" style="display: none; color: green;">Comment uploaded!</div>
 </div>
 
