--- a/HTML/Mobile/MessageDetail.html
+++ b/HTML/Mobile/MessageDetail.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Message List</title>
+    <title>Chat Simulation</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -28,24 +28,11 @@
             align-items: center;
             position: relative;
         }
-        .exit-button {
-            position: absolute;
-            top: 10px;
-            left: 10px;
-            background-color: #ccc;
-            color: #000;
-            border: none;
-            padding: 5px 10px;
-            border-radius: 5px;
-            cursor: pointer;
-            margin-bottom: 40px;
-        }
         .message-container {
-            margin-top: 10px;
-            height: 95%;
             width: 100%;
-            display: flex;
-            flex-direction: column;
+            height: 100%;
+            overflow-y: auto;
+            margin-top: 20px;
         }
         .message {
             display: flex;
@@ -67,12 +54,47 @@
             align-self: flex-end;
             flex-direction: row-reverse;
         }
+        .input-container {
+            width: 100%;
+            margin-top: auto;
+            display: flex;
+            align-items: center;
+        }
+        input[type="text"] {
+            width: calc(100% - 60px); 
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            margin-right: 10px;
+        }
+        .send-button {
+            padding: 10px;
+            border: none;
+            border-radius: 50%; 
+            background-color: #007bff;
+            color: #fff;
+            cursor: pointer;
+            width: 40px; 
+            height: 40px; 
+        }
+        .exit-button {
+            position: absolute;
+            top: 10px;
+            left: 10px;
+            background-color: #ccc;
+            color: #000;
+            border: none;
+            padding: 5px 10px;
+            border-radius: 5px;
+            cursor: pointer;
+            margin-bottom: 40px;
+        }
     </style>
 </head>
 <body>
 
 <div class="mobile-container">
-    <button class="exit-button" onclick="navigateToDashBoard()">Exit</button>
+    <button class="exit-button" onclick="navigateToOtherPage()">Exit</button>
     <div class="message-container">
         <div class="message other">
             <img src="/Mobile/resource/avatar_icon.png"  class="avatar">
@@ -86,15 +108,14 @@
     </div>
     <div class="input-container">
         <input type="text" placeholder="Type your message...">
-        <button onclick="sendMessage()">↑</button>
+        <button onclick="sendMessage()" class="send-button">↑</button>
     </div>
 </div>
 
 <script>
-    function navigateToMessageDetail(){
-        window.location.href = "MessageDetail.html";
+    function navigateToOtherPage() {
+        window.location.href = "MyMessage.html";
     }
-
 </script>
 
 </body>
