--- a/HTML/Mobile/MyMessage.html
+++ b/HTML/Mobile/MyMessage.html
@@ -29,48 +29,39 @@
             position: relative;
         }
         .message-container {
-            max-width: 360px;
-            margin: 0 auto;
+            margin-top: 10px;
+            height: 95%;
+            width: 100%;
+            display: flex;
+            flex-direction: column;
         }
-        .message {
+        .message-card {
             display: flex;
             align-items: center;
-            margin-bottom: 10px;
+            border: 1px solid gray; 
+            width: 100%;
+            height: auto; 
+            cursor: pointer;
         }
-        .message .avatar {
-            width: 50px;
-            height: 50px;
-            border-radius: 50%;
-            margin-right: 10px;
+        .message .avatar-container {
+            display: flex;
+            align-items: center;
         }
         .message .content {
+            flex: 1; 
             background-color: #007bff;
             color: #fff;
             padding: 10px;
             border-radius: 10px;
-            max-width: 70%;
             word-wrap: break-word;
+            overflow: hidden; 
+            text-overflow: ellipsis; 
         }
-        .mobile-container {
-            background-color: #ffffff;
-            padding: 40px;
-            border-radius: 8px;
-            box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.1);
-            width: 400px;
-            height: 800px;
-            text-align: center;
-            position: relative;
-        }
-        .exit-button {
-            position: absolute;
-            top: 10px;
-            left: 10px;
-            background-color: #ccc;
-            color: #000;
-            border: none;
-            padding: 5px 10px;
-            border-radius: 5px;
-            cursor: pointer;
+        .img{
+            height: 40px;
+            margin-right: 10px;
+            margin-top: 5px;
+            margin-left: 5px;
         }
         .bottom-menu-bar-container {
             position: absolute;
@@ -84,23 +75,23 @@
             height: 20px;
             cursor: pointer;
         }
+        
     </style>
 </head>
 <body>
 
 <div class="mobile-container">
-    <button class="exit-button" onclick="navigateToDashBoard()">Exit</button>
     <div class="message-container">
-        <div class="message">
-            <p>David</p>
+        <div class="message-card" onclick="navigateToMessageDetail()">
+            <div class="avatar-container"><img src="/Mobile/resource/avatar_icon.png" class="img"></div>
             <div class="content">Yes we do have availiable spot</div>
         </div>
-        <div class="message">
-            <p>John</p>
+        <div class="message-card" onclick="navigateToMessageDetail()">
+            <div class="avatar-container"><img src="/Mobile/resource/avatar_icon.png" class="img"></div>
             <div class="content">Still going to school tmr morning?</div>
         </div>
-        <div class="message">
-            <p>Lucy</p>
+        <div class="message-card" onclick="navigateToMessageDetail()">
+            <div class="avatar-container"><img src="/Mobile/resource/avatar_icon.png" class="img"></div>
             <div class="content">We are full</div>
         </div>
         <!-- More messages here -->
@@ -126,6 +117,10 @@
     function navigateToMyProfile(){
         window.location.href = "MyProfile.html";
     }
+    function navigateToMessageDetail(){
+        window.location.href = "MessageDetail.html";
+    }
+
 </script>
 
 </body>
